Fix the styling when the text in the review and edit nursery is too long especially for the name
Reviewer: Tiff Go

Issue: GCP-8793

--- a/src/main/webapp/WEB-INF/static/css/fieldbook.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook.css
@@ -1138,3 +1138,13 @@ a.fbk-edit-experiment{
 	right: 0; 
 	left: auto;
 }
+.fbk-label-overflow{
+	overflow:hidden;
+    text-overflow:ellipsis;
+    width:100%;
+}
+.fbk-span-overflow{
+	overflow:hidden;
+	white-space:nowrap;
+	text-overflow:ellipsis;
+}
